# true-crime-hackathon-2025-insight

./: .gitignore  README.md  Taskfile.yml  audioAI.ipynb  extract-audio.ipynb  pyproject.toml  test.py
backend/: package.json
backend/prisma/: dev.db  schema.prisma
backend/prisma/migrations/20250218195741_init/: migration.sql
backend/src/: index.ts
frontend/: package-lock.json  package.json
frontend/public/: nonsilent_ranges.json
frontend/src/: App.css  App.tsx  Timeline.css  Timeline.tsx  VideoPlayer.css  VideoPlayer.tsx  main.tsx  utils.ts
frontend/src/assets/: output.txt
frontend/src/interfaces/: marker.ts  range.ts
