[project]
name = "team-insight"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "numpy (>=1.21.0,<1.22.0)",
    "moviepy (>=1.0.3,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "torch (==1.13.1+cpu)",
    "torchaudio (==0.13.1+cpu)",
    "whisper-timestamped (>=1.15.8,<2.0.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchaudio = {source = "pytorch_cpu"}
[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"